force-app/main/default/objects/Vehicle_Customer__c/Vehicle_Customer__c.object-meta.xml
<CustomObject>
    <label>Vehicle Customer</label>
    <nameField>
        <label>Vehicle Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>