force-app/main/default/objects/Vehicle_Customer__c/fields/Preferred_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Vehicle_Type__c</fullName>
    <label>Preferred Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>