force-app/main/default/objects/Vehicle_Customer__c/fields/Vehicle_Order__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores customer details</description>
    <label>Vehicle Order</label>
    <referenceTo>Vehicle_Order__c</referenceTo>
    <relationshipLabel>Vehicle Customers</relationshipLabel>
    <relationshipName>Vehicle_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>