force-app/main/default/objects/Vehicle_Customer__c/fields/Vehicle_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks vehicle servicing requests</description>
    <label>Vehicle Service Request</label>
    <referenceTo>Vehicle_Service_Request__c</referenceTo>
    <relationshipLabel>Vehicle Customers</relationshipLabel>
    <relationshipName>Vehicle_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>