force-app/main/default/objects/Vehicle_Customer__c/fields/Vehicle_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Test_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks test drive bookings</description>
    <label>Vehicle Test Drive</label>
    <referenceTo>Vehicle_Test_Drive__c</referenceTo>
    <relationshipLabel>Vehicle Customers</relationshipLabel>
    <relationshipName>Vehicle_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>